Start using Copernicus Hub pre-computed products, like NDVI and NDWI.
Additionally add a tiling capability to split
Ariquemes in a regular grid and download the
sentinel2 images by parts.

--- a/copernicus_api/03_aggregate_rasters.ipynb
+++ b/copernicus_api/03_aggregate_rasters.ipynb
@@ -2,35 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Retrieving notices: done\n",
       "Channels:\n",
       " - defaults\n",
       "Platform: linux-64\n",
       "Collecting package metadata (repodata.json): done\n",
-      "Solving environment: failed\n",
+      "Solving environment: done\n",
       "\n",
-      "PackagesNotFoundError: The following packages are not available from current channels:\n",
-      "\n",
-      "  - seaborn-image\n",
-      "\n",
-      "Current channels:\n",
-      "\n",
-      "  - https://repo.anaconda.com/pkgs/main\n",
-      "  - https://repo.anaconda.com/pkgs/r\n",
-      "\n",
-      "To search for alternate channels that may provide the conda package you're\n",
-      "looking for, navigate to\n",
-      "\n",
-      "    https://anaconda.org\n",
-      "\n",
-      "and use the search bar at the top of the page.\n",
-      "\n",
+      "# All requested packages already installed.\n",
       "\n",
       "\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
@@ -38,7 +24,7 @@
     }
    ],
    "source": [
-    "%conda install pandas gdal scikit-learn scikit-image scipy matplotlib seaborn seaborn-image"
+    "%conda install pandas gdal scikit-learn scikit-image scipy matplotlib seaborn"
    ]
   },
   {
@@ -49,13 +35,11 @@
    "source": [
     "import os\n",
     "from pathlib import Path\n",
-    "from dotenv import load_dotenv\n",
     "import rasterio\n",
     "import numpy as np\n",
-    "from rasterio.plot import show\n",
     "import os\n",
-    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "import shutil\n",
     "\n",
     "np.seterr(divide='ignore', invalid='ignore')\n",
     "os.chdir(\"/home/me/workspace/det_remota/trabalho_final\")"
@@ -63,105 +47,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "year  month\n",
+       "2017  08       6\n",
+       "2018  08       6\n",
+       "Name: path, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "infrared_images = [\n",
-    "    rasterio.open(image_file)\n",
-    "    for image_file in Path(os.getcwd()).glob('data/sentinel2/COLOR_INFRARED_*.tiff')\n",
-    "]\n",
-    "swir_images = [\n",
-    "    rasterio.open(image_file)\n",
-    "    for image_file in Path(os.getcwd()).glob('data/sentinel2/SWIR_*.tiff')\n",
-    "]"
+    "RAW_FILES_PATH = Path(\"data/sentinel2/merged\")\n",
+    "\n",
+    "def parse_file_path(path:Path):\n",
+    "    file_info = str(path).replace(f\"{RAW_FILES_PATH}/\", '')\n",
+    "    file_info = file_info.replace('.tiff', '')\n",
+    "    layer, year, filename = file_info.split('/')\n",
+    "\n",
+    "    \n",
+    "    return {\n",
+    "        'layer' :layer,\n",
+    "        'year' :year,\n",
+    "        'month' :filename.split('_')[-1],\n",
+    "        'path': path,\n",
+    "    }\n",
+    "\n",
+    "files_df = pd.DataFrame(\n",
+    "    [\n",
+    "        parse_file_path(path)\n",
+    "        for path in RAW_FILES_PATH.glob('**/*.tiff')\n",
+    "    ]\n",
+    ")\n",
+    "files_df.groupby(['year', 'month']).path.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TIME_INDEXES = [img.files[0].split('/')[-1].replace('SWIR_', '') for img in swir_images]\n",
-    "ALL_BANDS_OUTPUT_PATH = Path('data/sentinel2/pre_processed/all_bands')\n",
+    "import shutil\n",
     "\n",
-    "OUT_CHANNEL_NAMES = [\n",
-    "    'band_3',\n",
-    "    'band_4',\n",
-    "    'band_8',\n",
-    "    'band_11',\n",
-    "    'band_12',\n",
-    "    'ndwi',\n",
-    "    'mndwi',\n",
-    "    'ndvi',\n",
-    "    'ndmi',\n",
-    "    'msavi2',\n",
-    "]\n",
-    "\n",
-    "def find_image(image_list: list, filename:str):\n",
-    "    for img in image_list:\n",
-    "        if filename in img.files[0].split('/')[-1]:\n",
-    "            return img\n",
-    "    return None\n",
+    "AGGREGATED_PATH = Path('data/sentinel2/aggregated')\n",
+    "AGGREGATED_PATH.mkdir(parents=True, exist_ok=True)\n",
+    "NORMALIZED_PATH = Path('data/sentinel2/normalized')\n",
+    "NORMALIZED_PATH.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "def apply_constrast(channel_data):\n",
     "    min_max = (channel_data - np.min(channel_data)) / (np.max(channel_data) - np.min(channel_data))\n",
-    "    return np.round(255 * min_max, 0)\n",
+    "    return 255 * min_max\n",
     "\n",
-    "def msavi2(channel_nir, channel_red):\n",
-    "    \"\"\"\n",
-    "    MSAVI2 = (1/2)*(2(NIR+1)-sqrt((2*NIR+1)^2-8(NIR-Red)))\n",
-    "    \"\"\"\n",
-    "    return (1/2)*(2*(channel_nir+1) - np.sqrt(np.power(2*channel_nir+1, 2) - 8*(channel_nir-channel_red)))\n",
-    "\n",
-    "def extract_channels(time_index:str):\n",
-    "    \"\"\"\n",
-    "    COLOR_INFRARED is RGB 8-4-3\n",
-    "    SWIR is RGB 12-11-4\n",
-    "    \"\"\"\n",
-    "    infrared_img = find_image(infrared_images, time_index)\n",
-    "    swir_img = find_image(swir_images, time_index)\n",
-    "\n",
-    "    band_8, band_4, band_3 = (infrared_img.read(x) for x in range(1,4))\n",
-    "    band_12, band_11 = (swir_img.read(x) for x in range(1,3))\n",
+    "def aggregate_tiff(year, month, path: list[Path]):\n",
     "    \n",
-    "    band_3 = apply_constrast(band_3)\n",
-    "    band_4 = apply_constrast(band_4)\n",
-    "    band_8 = apply_constrast(band_8)\n",
-    "    band_11 = apply_constrast(band_11)\n",
-    "    band_12 = apply_constrast(band_12)\n",
+    "\n",
+    "    print(f\"Pre-Processing raster for {year}/{month}\")\n",
+    "\n",
+    "    imgs_dict = {}\n",
+    "    for _path in path:\n",
+    "        if 'MOISTURE' in str(_path):\n",
+    "            img_index = \"ndmi\"\n",
+    "        if 'MSAVI2' in str(_path):\n",
+    "            img_index = \"msavi2\"\n",
+    "        if 'NDWI' in str(_path):\n",
+    "            img_index = \"ndwi\"\n",
+    "        if 'VEGETATION_INDEX' in str(_path):\n",
+    "            img_index = \"ndvi\"\n",
+    "        if 'FALSE-COLOR' in str(_path):\n",
+    "            img_index = \"false_color\"\n",
+    "        if 'TRUE_COLOR' in str(_path):\n",
+    "            img_index = \"true_color\"\n",
+    "        imgs_dict[img_index] = rasterio.open(_path)\n",
     "    \n",
     "    channels_values = [\n",
-    "        band_3,\n",
-    "        band_4,\n",
-    "        band_8,\n",
-    "        band_11,\n",
-    "        band_12,\n",
-    "        apply_constrast((band_3 - band_8) / (band_3 + band_8)),\n",
-    "        apply_constrast((band_3 - band_11) / (band_3 + band_11)),\n",
-    "        apply_constrast((band_8 - band_4) / (band_8 + band_4)),\n",
-    "        apply_constrast((band_8 - band_11) / (band_8 + band_11)),\n",
-    "        apply_constrast(msavi2(band_4, band_3)),\n",
+    "        # True Color first\n",
+    "        imgs_dict[\"true_color\"].read(1),\n",
+    "        imgs_dict[\"true_color\"].read(2),\n",
+    "        imgs_dict[\"true_color\"].read(3),\n",
+    "        # False Color second\n",
+    "        imgs_dict[\"false_color\"].read(1),\n",
+    "        imgs_dict[\"false_color\"].read(2),\n",
+    "        imgs_dict[\"false_color\"].read(3),\n",
+    "        # Indexes in the tails\n",
+    "        imgs_dict[\"ndmi\"].read(1),\n",
+    "        imgs_dict[\"msavi2\"].read(1),\n",
+    "        imgs_dict[\"ndwi\"].read(1),\n",
+    "        imgs_dict[\"ndvi\"].read(1),\n",
+    "        # One mask for NODATA\n",
+    "        imgs_dict[\"ndvi\"].read(2),\n",
     "    ]\n",
     "\n",
-    "    out_filename = ALL_BANDS_OUTPUT_PATH.joinpath(time_index)\n",
-    "    profile = infrared_img.profile.copy()\n",
+    "    profile = imgs_dict[\"ndvi\"].profile.copy()\n",
     "    profile.update(count=len(channels_values))\n",
     "\n",
-    "    with rasterio.open(out_filename, \"w\", **profile) as out_tiff:\n",
+    "    agg_out_path = AGGREGATED_PATH.joinpath(f'{year}_{month.zfill(2)}.tiff')\n",
+    "    with rasterio.open(agg_out_path, \"w\", **profile) as out_tiff:\n",
     "        for idx, values in enumerate(channels_values):\n",
     "            out_tiff.write_band(idx+1, values)\n",
+    "    \n",
+    "    normalized_values = [\n",
+    "        apply_constrast(value)\n",
+    "        for value in channels_values\n",
+    "    ]\n",
     "\n",
+    "    norm_out_path = NORMALIZED_PATH.joinpath(f'{year}_{month.zfill(2)}.tiff')\n",
+    "    with rasterio.open(norm_out_path, \"w\", **profile) as out_tiff:\n",
+    "        for idx, values in enumerate(normalized_values):\n",
+    "            out_tiff.write_band(idx+1, values)\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pre-Processing raster for 2017/08\n",
+      "Pre-Processing raster for 2018/08\n"
+     ]
+    }
+   ],
+   "source": [
+    "OUT_CHANNEL_NAMES = [\n",
+    "    \"TRUE_COLOR_1\",\n",
+    "    \"TRUE_COLOR_2\",\n",
+    "    \"TRUE_COLOR_3\",\n",
+    "    \"FALSE_COLOR_1\",\n",
+    "    \"FALSE_COLOR_2\",\n",
+    "    \"FALSE_COLOR_3\",\n",
+    "    \"NDMI\",\n",
+    "    \"MSAVI2\",\n",
+    "    \"NDWI\",\n",
+    "    \"NDVI\",\n",
+    "    \"NODATA_MASK\",\n",
+    "]\n",
     "\n",
-    "pd.DataFrame({\n",
-    "    'Band': range(1, len(OUT_CHANNEL_NAMES)+1),\n",
-    "    'Description': OUT_CHANNEL_NAMES\n",
-    "}).to_csv(ALL_BANDS_OUTPUT_PATH.joinpath('bands.csv'), index=False)\n",
+    "if True:\n",
+    "    if AGGREGATED_PATH.exists():\n",
+    "        shutil.rmtree(AGGREGATED_PATH)\n",
+    "    AGGREGATED_PATH.mkdir(parents=True)\n",
+    "    if NORMALIZED_PATH.exists():\n",
+    "        shutil.rmtree(NORMALIZED_PATH)\n",
+    "    NORMALIZED_PATH.mkdir(parents=True)\n",
     "\n",
+    "if True:\n",
+    "    pd.DataFrame({\n",
+    "        'Band': range(1, len(OUT_CHANNEL_NAMES)+1),\n",
+    "        'Description': OUT_CHANNEL_NAMES\n",
+    "    }).to_csv(AGGREGATED_PATH.joinpath('bands.csv'), index=False)\n",
+    "    pd.DataFrame({\n",
+    "        'Band': range(1, len(OUT_CHANNEL_NAMES)+1),\n",
+    "        'Description': OUT_CHANNEL_NAMES\n",
+    "    }).to_csv(NORMALIZED_PATH.joinpath('bands.csv'), index=False)\n",
     "\n",
-    "for time_index in TIME_INDEXES:\n",
-    "    extract_channels(time_index)"
+    "    files_df\\\n",
+    "        .groupby(['year', 'month'])\\\n",
+    "        .path.unique().reset_index()\\\n",
+    "        .apply(lambda x: aggregate_tiff(**x), axis=1)"
    ]
   }
  ],
